Refactored scoring engine: fixed duplicate logic, implemented role fit, improved domain scoring and final score calculation